Removing the @media styles and made single line ellipsis for the content name overflow in the statring pag,end pag and menu page, and fix for the play button overflow on the tittle in the starting page.

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -162,17 +162,42 @@ ion-popover-view.fit ion-content {
     style="overflow: hidden;text-overflow: ellipsis;
 
 }*/
-
 .conver-page-title {
+     white-space: nowrap; 
+    overflow: hidden;
+    padding: 0 2%;
+    text-overflow: ellipsis;
+    font-family: baloobhai;
+    position: absolute;
+    width: 100%;
+    top: 23%;
+   /* display: -webkit-box;*/
+    -webkit-box-orient: vertical;
+    height: 24%;
+    -webkit-line-clamp: 2;
+    font-size: 10vh;
+    -webkit-text-stroke: 1vh #01ac8a;
+    z-index: 0;
+    /* text-shadow: -3px 3px 0 white, 3px -3px 0 white, -6px 6px 0 yellow, 6px -6px 0 yellow, -9px 9px 0 #01ac8a, -9px -9px 0 #01ac8a; */
+}
+
+    /* text-shadow: -3px 3px 0 white, 3px -3px 0 white, -6px 6px 0 yellow, 6px -6px 0 yellow, -9px 9px 0 #01ac8a, -9px -9px 0 #01ac8a; */
+
+   /* white-space: nowrap;
+    overflow: hidden;
+    padding:0 2%;
+    text-overflow: ellipsis;
     font-family: baloobhai;
     position: absolute;
     width: 100%;
     top: 20%;
     font-size: 10vh;
     -webkit-text-stroke: 1vh #01ac8a;
-    z-index: 0;
+    z-index: 0;*/
+
+
     /*text-shadow: -3px 3px 0 white, 3px -3px 0 white, -6px 6px 0 yellow, 6px -6px 0 yellow, -9px 9px 0 #01ac8a, -9px -9px 0 #01ac8a;*/
-}
+
 
 .conver-page-title1 {
     -webkit-text-stroke: 0.4vh yellow;
@@ -227,17 +252,17 @@ ion-popover-view.fit ion-content {
     padding-top: 7%;
     position: absolute;
     height: 30%;
-    text-overflow: ellipsis;
-    overflow: hidden;
+   
+   
 }
 
 .gc-menu-title-cont p {
-    font-size: 5vh;
+    /*font-size: 5vh;
     width: 100%;
     float: left;
     padding: 0 1%;
     padding-right: 13%;
-    height: 100%;
+    height: 100%;*/
     /*font-size: 5vh;
     width: 100%;
     float: left;
@@ -248,6 +273,19 @@ ion-popover-view.fit ion-content {
     padding-right: 5%;
     /* background: red; 
     height: 100%;*/
+    font-size: 5vh;
+    width: 100%;
+    white-space: nowrap;
+    float: left;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    /* word-break: break-word; */
+    padding: 0 1%;
+    word-wrap: break-word;
+    padding-right: 10%;
+    padding-left: 6%;
+    height: 100%;
+    margin-top: 25%;
 }
 
 .gc-menu-btn {
@@ -523,7 +561,7 @@ ion-popover-view.fit ion-content {
     }
 }*/
 
-@media (max-width: 1920px) {
+/*@media (max-width: 1920px) {
     .play_image {
        
         margin-top: 4%;
@@ -608,8 +646,16 @@ ion-popover-view.fit ion-content {
     .gc-content-owner {
         margin-top: 15%;
     }
+}*/
+.gc-content-owner {
+    font-size: 2em;
+   /* margin-top: 23%;*/
+   top:40%;
+    padding: 1% 0;
+    width: 100%;
+    text-align: center;
+    position: absolute;
 }
-
 
 .btn-credits {
     position: absolute;
